--- a/composer.json
+++ b/composer.json
@@ -14,12 +14,12 @@
 		}
 	],
 	"require": {
-		"php": ">=7.3"
+		"php": ">=7.3",
+		"friendsofphp/php-cs-fixer": "^2.14"
 	},
 	"require-dev": {
 		"ext-xdebug": "*",
 		"apigen/apigen": "dev-master#85290e8",
-		"friendsofphp/php-cs-fixer": "^2.14",
 		"localheinz/composer-normalize": "^1.1",
 		"phpmd/phpmd": "^2.6",
 		"phpstan/phpstan": "^0.11",
