--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -15,8 +15,8 @@ test:php7.3:
     - vendor/bin/php-cs-fixer fix --diff --dry-run --verbose
     # Run PHPUnit
     - vendor/bin/phpunit --colors=never
-    # ApiGen
-    - vendor/bin/apigen generate src --destination build/api/
+    # Run phpDocumentor
+    - phpdoc
   artifacts:
     paths:
       - build/coverage/
