--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -20,7 +20,7 @@ test:php:
   artifacts:
     paths:
       - build/coverage/
-      - build/docs/
+      # - build/docs/
   coverage: '/^\s*Lines:\s*\d+.\d+\%/'
 
 pages:
@@ -33,7 +33,7 @@ pages:
   script:
     - mkdir public/
     - mv build/coverage/ public/
-    - mv build/docs/ public/
+    # - mv build/docs/ public/
     - curl -sS https://the-framework.gitlab.io/redirect.php | php
   artifacts:
     paths:
