--- a/.gitattributes
+++ b/.gitattributes
@@ -5,7 +5,7 @@ tests/ export-ignore
 .gitattributes export-ignore
 .gitignore export-ignore
 .gitlab-ci.yml export-ignore
-.php_cs.dist export-ignore
+.php-cs-fixer.dist.php export-ignore
 ci-test.sh export-ignore
 docker-compose.yml export-ignore
 documentation.md export-ignore
