Add composer funding

--- a/composer.json
+++ b/composer.json
@@ -51,5 +51,11 @@
         "wiki": "https://gitlab.com/aplus-framework/libraries/coding-standard/wikis/home",
         "source": "https://gitlab.com/aplus-framework/libraries/coding-standard",
         "docs": "https://docs.aplus-framework.com/guides/libraries/coding-standard/"
-    }
+    },
+    "funding": [
+        {
+            "type": "other",
+            "url": "https://www.paypal.com/donate/?hosted_button_id=NGBNW5PY4VSJ4"
+        }
+    ]
 }
