--- a/composer.json
+++ b/composer.json
@@ -32,7 +32,7 @@
     ],
     "require": {
         "php": ">=8.0",
-        "friendsofphp/php-cs-fixer": "^3.9.2"
+        "friendsofphp/php-cs-fixer": "3.9.3"
     },
     "require-dev": {
         "ext-xdebug": "*",
