--- a/composer.json
+++ b/composer.json
@@ -32,7 +32,7 @@
     ],
     "require": {
         "php": ">=8.0",
-        "friendsofphp/php-cs-fixer": "3.9.3"
+        "friendsofphp/php-cs-fixer": "~3.11.0"
     },
     "require-dev": {
         "ext-xdebug": "*",
