--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,8 +1,15 @@
 version: "3"
 services:
   package:
-    image: registry.gitlab.com/aplus-framework/images/package:1
+    image: registry.gitlab.com/aplus-framework/images/package:2
     container_name: package-coding-standard
+    working_dir: /package
+    volumes:
+      - .:/package
+    tty: true
+  package-last:
+    image: registry.gitlab.com/aplus-framework/images/package:3
+    container_name: package-coding-standard-last
     working_dir: /package
     volumes:
       - .:/package
