--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -83,5 +83,9 @@ jobs:
         run:
           composer update
 
+      - name: Coding Standard
+        run:
+          vendor/bin/php-cs-fixer fix --diff --dry-run --verbose
+
       - name: PHPUnit
         run: vendor/bin/phpunit --verbose
