--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -41,6 +41,7 @@ test:php-last:
     - php -v
     - composer update
   script:
+    - vendor/bin/php-cs-fixer fix --diff --dry-run --verbose
     - vendor/bin/phpunit --colors=never
   coverage: '/^\s*Lines:\s*\d+.\d+\%/'
 
